Implemented some crypto

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,7 @@
-chardet==2.3.0
-driconf==0.9.1
-iniparse==0.4
-kitchen==1.2.4
-pycurl==7.43.0
-pygobject==3.22.0
-pygpgme==0.3
-pyliblzma==0.5.3
-pyxattr==0.5.3
-rpm-python==4.13.0.1
+appdirs==1.4.3
+packaging==16.8
+pep8==1.7.0
+pycodestyle==2.3.1
+pycrypto==2.6.1
+pyparsing==2.2.0
 six==1.10.0
-urlgrabber==3.10.1
-vboxapi==1.0
-virtualenv==15.0.3
-wxPython==3.0.2.0
-wxPython-common==3.0.2.0
-yum-metadata-parser==1.1.4
